@@ -1,5 +1,6 @@
 package com.example.backend.jwt;
 
+import com.example.backend.services.authentication.ApplicationUserService;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jws;
 import io.jsonwebtoken.JwtException;
@@ -9,8 +10,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
@@ -20,10 +21,6 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Component
@@ -31,6 +28,8 @@ public class JwtVerifier extends OncePerRequestFilter {
 
     @Value("${jwt.secret}")
     private String secretKey;
+
+    private final ApplicationUserService applicationUserService;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -60,23 +59,26 @@ public class JwtVerifier extends OncePerRequestFilter {
             Claims body = claimsJws.getBody();
             String email = body.getSubject();
 
-            List<Map<String, String>> roles = (List<Map<String, String>>) body.get("roles");
+//            List<Map<String, String>> roles = (List<Map<String, String>>) body.get("roles");
 
-            Set<SimpleGrantedAuthority> authorities = roles == null ? Set.of() :
-                    roles.stream()
-                            .map(r -> new SimpleGrantedAuthority(r.get("authority")))
-                            .collect(Collectors.toSet());
+//            Set<SimpleGrantedAuthority> authorities = roles == null ? Collections.emptySet():
+//                    roles.stream()
+//                            .map(r -> new SimpleGrantedAuthority(r.get("authority")))
+//                            .collect(Collectors.toSet());
 
+            UserDetails userDetails = applicationUserService.loadUserByUsername(email);
             Authentication authentication = new UsernamePasswordAuthenticationToken(
-                    email,
+                    userDetails,
                     null,
-                    authorities
+                    userDetails.getAuthorities()
             );
 
             SecurityContextHolder.getContext().setAuthentication(authentication);
 
         } catch (JwtException e) {
-            throw new IllegalStateException(String.format("Token %s cannot be trusted", token));
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.getWriter().write("Token cannot be trusted");
+            return;
         }
 
         filterChain.doFilter(request, response);
